Added more improves

--- a/src/assets/locale/messages.en.json
+++ b/src/assets/locale/messages.en.json
@@ -1,1 +1,17 @@
-{}
+{
+  "november": "November",
+  "sunday": "Sunday",
+  "monday": "Monday",
+  "tuesday": "Tuesday",
+  "wednesday": "Wednesday",
+  "thursday": "Thursday",
+  "friday": "Friday",
+  "saturday": "Saturday",
+  "sunday_short": "Sun",
+  "monday_short": "Mon",
+  "tuesday_short": "Tue",
+  "wednesday_short": "Wed",
+  "thursday_short": "Thu",
+  "friday_short": "Fri",
+  "saturday_short": "Sat"
+}
